# dark-monitor

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  shell.nix
.direnv/: nix-profile-unknown  nix-profile-unknown.rc
.github/workflows/: test.yml
recipes/: kitty_theme.sh  sway_wallpaper.sh
src/: cli_args.rs  color_scheme.rs  cs_reader.rs  cs_writer.rs  lib.rs  main.rs  portal_appearance.rs
src/daemon/: mod.rs
