[package]
name = "dark-monitor"
version = "0.1.2"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }

[build-dependencies]
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.8"
